# SAP-O2C-Automation

./: .gitignore  README.md  agent.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  post-create.sh
agent/: prompt.py  pyproject.toml
agent/sub_agents/charts/: agent.py  prompt.py
agent/sub_agents/inventory/: agent.py
agent/sub_agents/product/: agent.py
agent/sub_agents/sales_order/: prompt.py
agent/sub_agents/single_entity_analyst/: agent.py
agent/tools/: cross_entity.py
constants/: branding.py  constants.py
docs/: CODESPACE_TEST_CHECKLIST.md  SAP_O2C_ADK_Workshop_Guide.md  SAP_O2C_Google_FreeTier_Architecture.md  Sonnet4.5_Analysis_OPENAPI_JSON.json  sap-copilot-flow.mermaid
docs/blog/: from-17-flows-to-4-classes.md
experiments/: agents-cli-evaluation.md
experiments/agents-cli-evaluation-artifacts/: phase1-2-install-and-inspect.txt  phase1-3-findings.md  phase3-scaffold-enhance-signals.txt  phase4-skipped.txt
mcp-server/: .gitignore  README.md  mock-server.js  package.json  test-with-claude.md  tsconfig.json
mcp-server/src/: handlers.ts  index.ts  odata-clients.ts  server.ts  tool-definitions.ts  types.ts
sub_agents/cross_entity_analyst/: agent.py  prompt.py
sub_agents/inventory/: prompt.py
sub_agents/outbound_delivery/: agent.py  prompt.py
sub_agents/product/: prompt.py
sub_agents/sales_order/: agent.py
sub_agents/single_entity_analyst/: prompt.py
tools/: query_builder.py
